# game_off_2022

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/models/: broken_mug.glb  broken_plate.glb  bull.glb  drawer.glb  fish.glb  fishbowl.glb  fishbowl_empty.glb  fishmonger.glb  fishmonger_with_fish.glb  herring.glb  intro.glb  level_five.glb  level_one.glb  level_three.glb  level_two.glb  matador.glb  matador_with_cape.glb  metal_shelf.glb  mug.glb  outro.glb  pa.glb  person.glb  plate.glb  pregame.glb  round_table.glb  shelf.glb  table.glb
misc/models/: armoire.blend  armoire.blend1  broken_mug.blend  broken_mug.blend1  broken_plate.blend  broken_plate.blend1  bull.blend  bull.blend1  debug_level.blend  drawer.blend  drawer.blend1  fish.blend  fish.blend1  fishbowl.blend  fishbowl.blend1  fishbowl_empty.blend  fishbowl_empty.blend1  fishmonger.blend  fishmonger.blend1  hering.blend  hering.blend1  level_one.blend  level_one.blend1  level_two.blend  level_two.blend1  matador.blend  matador.blend1  matador2.blend  metal_shelf.blend  metal_shelf.blend1  metal_shelf_02.blend  metal_shelf_02.blend1  mug.blend  mug.blend1  other_persons.glb  pa.blend  pa.blend1  person.blend  person.blend1  plate.blend  (+7 more)
src/: animation.rs  asset_loading.rs  assets.rs  audio.rs  billboard.rs  bull.rs  cutscene.rs  dust.rs  fishmonger.rs  follow_text.rs  game_camera.rs  game_controller.rs  game_script.rs  game_state.rs  groups.rs  ingame.rs  ingame_ui.rs  main.rs  menus.rs  player.rs  props.rs  score.rs  shopkeeper.rs  splash.rs  title_screen.rs
src/ui/: text_size.rs
wasm/: .gitignore  index.html  loading_screen.mjs
