[package]
name = "bull_cliche"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
leafwing-input-manager = "0.5.0"
bevy_kira_audio = { version = "0.12.0", features = ["wav"]}
noise = "0.7.0"
rand = "0.8"
uuid = { version = "1.1.2", features = ["v4"]}
bevy-inspector-egui = "0.12.1"
bevy_rapier3d = { version = "0.17.0", features = ["debug-render", "enhanced-determinism"] }
bevy-scene-hook = { git = "https://github.com/ramirezmike/bevy-scene-hook" }
bevy_camera_shake = { git = "https://github.com/Andrewp2/bevy_camera_shake" }


[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
