[package]
name = "bull_cliche"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9"
leafwing-input-manager = "0.7.0"
bevy_kira_audio = { version = "0.13.0", features = ["wav"]}
noise = "0.7.0"
rand = "0.8"
uuid = { version = "1.1.2", features = ["v4"]}
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui?rev=faea5e2406f94bc0146c55b2c668da8f921dcbc2" }
bevy_rapier3d = { git = "https://github.com/devil-ira/bevy_rapier", branch = "bevy-0.9", features = ["debug-render"] }
bevy-scene-hook = { git = "https://github.com/ramirezmike/bevy-scene-hook?rev=511c0a3eeb958686aa590ccf7743dc9137ffe5eb" }
bevy_camera_shake = { git = "https://github.com/Andrewp2/bevy_camera_shake?rev=04caaa4d4597fecfce0afc142be56b709366f35a" }
bevy_mod_outline = "0.3.0"
bevy_flycam = "0.9.0"
